--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,13 @@
     <string name="app_name">DataManager</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-
+    
+    <string name="back_txt">返回</string>
+    <string name="start_date">起始日期：</string>
+    <string name="end_date">结束日期：</string>
+    <string name="all_select">全选</string>
+    <string name="already_generate_file">已生成文件</string>
+    <string name="generate_file">生成文件</string>
+    <string name="delete">删除</string>
+   
 </resources>
